--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,19 @@
 # Dockerfile for frontend
+# Use a lightweight Nginx image
 FROM nginx:alpine
+
+# Remove default Nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy static frontend files from the build context (./frontend directory)
+# Ensure your index.html and other assets (css, js, images) are in this directory
 COPY . /usr/share/nginx/html
+
+# Expose port 80
+EXPOSE 80
+
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
