--- a/inference_service_model2/requirements.txt
+++ b/inference_service_model2/requirements.txt
@@ -1,7 +1,10 @@
 fastapi
-uvicorn
-torch
-torchvision
-Pillow
+uvicorn[standard]
+python-multipart
 numpy
-requests
+imageio
+Pillow
+tensorflow # Use CPU version for lighter image.
+scipy
+# Ensure you install CPU-only versions if not using GPU in Docker for lighter images
+# Example: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
