--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,22 +1,16 @@
 server {
-    listen 80;
-    server_name localhost;
+  listen 80;
+  server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html index.htm;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  # Proper static serving — use alias, not root
+  location /static/ {
+    alias /usr/share/nginx/html/static/;
+  }
 
-    # Optional: Add specific locations for assets if needed
-    # location /css/ {
-    #     alias /usr/share/nginx/html/css/;
-    # }
-    # location /js/ {
-    #     alias /usr/share/nginx/html/js/;
-    # }
-    # location /images/ {
-    #     alias /usr/share/nginx/html/images/;
-    # }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 }
