--- a/kubernetes/deployments/frontend-deployment.yaml
+++ b/kubernetes/deployments/frontend-deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: frontend
           image: frontend:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
