--- a/kubernetes/persistent-volumes/pvc.yaml
+++ b/kubernetes/persistent-volumes/pvc.yaml
@@ -7,4 +7,6 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
+  volumeName: nst-pv
+  storageClassName: ""   # Match the PV
