--- a/routing_service/Dockerfile
+++ b/routing_service/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.9-slim-buster
 
+# Install debugging tools
+RUN apt-get update && apt-get install -y dnsutils iputils-ping curl grep && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 COPY requirements.txt .
