fully working k8 cluster

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 services:
   frontend:
     build: ./frontend
+    image: deepanshu0903/nst_app:frontend
     ports:
       - "8080:80"
     networks:
@@ -14,10 +15,11 @@ services:
 
   routing_service:
     build: ./routing_service
+    image: deepanshu0903/nst_app:routing_service
     ports:
       - "8000:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     depends_on:
       - inference_service_model1
       - inference_service_model2
@@ -30,10 +32,11 @@ services:
 
   inference_service_model1:
     build: ./inference_services/model1
+    image: deepanshu0903/nst_app:inference_service_model1
     ports:
       - "8001:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     environment:
       PYTHONUNBUFFERED: 1
     networks:
@@ -41,10 +44,11 @@ services:
 
   inference_service_model2:
     build: ./inference_services/model2
+    image: deepanshu0903/nst_app:inference_service_model2
     ports:
       - "8002:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     environment:
       PYTHONUNBUFFERED: 1
     networks:
@@ -52,10 +56,11 @@ services:
 
   inference_service_model3:
     build: ./inference_services/model3
+    image: deepanshu0903/nst_app:inference_service_model3
     ports:
       - "8003:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     environment:
       PYTHONUNBUFFERED: 1
     networks:
@@ -63,10 +68,11 @@ services:
 
   inference_service_model4:
     build: ./inference_services/model4
+    image: deepanshu0903/nst_app:inference_service_model4
     ports:
       - "8004:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     environment:
       PYTHONUNBUFFERED: 1
     networks:
@@ -74,10 +80,11 @@ services:
 
   fine_tuning_service:
     build: ./fine_tuning_service
+    image: deepanshu0903/nst_app:fine_tuning_service
     ports:
       - "8005:8000"
     volumes:
-      - ./persistent_storage:/persistent_storage # Correct mount path
+      - ./persistent_storage:/persistent_storage
     environment:
       PYTHONUNBUFFERED: 1
     networks:
