--- a/kubernetes/deployments/inference-model1-deployment.yaml
+++ b/kubernetes/deployments/inference-model1-deployment.yaml
@@ -14,13 +14,13 @@ spec:
     spec:
       containers:
         - name: inference-service-model1
-          image: inference_model1:latest
+          image: deepanshu0903/nst_app:inference_service_model1
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: model-storage
-              mountPath: /persistent_storage # Correct mount path
+              mountPath: /persistent_storage
       volumes:
         - name: model-storage
           persistentVolumeClaim:
