--- a/kubernetes/deployments/inference-model3-deployment.yaml
+++ b/kubernetes/deployments/inference-model3-deployment.yaml
@@ -14,13 +14,13 @@ spec:
     spec:
       containers:
         - name: inference-service-model3
-          image: inference_model3:latest
+          image: deepanshu0903/nst_app:inference_service_model3
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: model-storage
-              mountPath: /persistent_storage # Correct mount path
+              mountPath: /persistent_storage
       volumes:
         - name: model-storage
           persistentVolumeClaim:
