--- a/kubernetes/services/inference-model1-service.yaml
+++ b/kubernetes/services/inference-model1-service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: inference-service-model1
+  labels:
+    app: inference-service-model1
 spec:
   selector:
     app: inference-service-model1
@@ -9,3 +11,4 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
+  type: ClusterIP
