--- a/kubernetes/elk/elasticsearch-deployment.yaml
+++ b/kubernetes/elk/elasticsearch-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: elasticsearch
+  namespace: elk
 spec:
   replicas: 1
   selector:
@@ -13,11 +14,26 @@ spec:
         app: elasticsearch
     spec:
       containers:
-        - name: elasticsearch
-          image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
-          ports:
-            - containerPort: 9200
-            - containerPort: 9300
-          env:
-            - name: discovery.type
-              value: single-node
+      - name: elasticsearch
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
+        ports:
+        - containerPort: 9200
+        - containerPort: 9300
+        env:
+        - name: discovery.type
+          value: single-node
+        - name: ES_JAVA_OPTS
+          value: "-Xms512m -Xmx512m"   # Java heap size limit to prevent OOM
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
+        volumeMounts:
+        - name: es-data
+          mountPath: /usr/share/elasticsearch/data
+      volumes:
+      - name: es-data
+        emptyDir: {}  # Replace with persistentVolumeClaim later for real use
