--- a/kubernetes/elk/elasticsearch-service.yaml
+++ b/kubernetes/elk/elasticsearch-service.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch
+  namespace: elk
 spec:
-  type: ClusterIP
+  ports:
+    - port: 9200
+      targetPort: 9200
   selector:
     app: elasticsearch
-  ports:
-    - protocol: TCP
-      port: 9200
-      targetPort: 9200
