--- a/kubernetes/elk/kibana-service.yaml
+++ b/kubernetes/elk/kibana-service.yaml
@@ -2,12 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kibana
+  namespace: elk
 spec:
-  type: NodePort
+  ports:
+    - port: 5601
+      targetPort: 5601
   selector:
     app: kibana
-  ports:
-    - protocol: TCP
-      port: 5601
-      targetPort: 5601
-      nodePort: 30501
