--- a/kubernetes/elk/logstash-deployment.yaml
+++ b/kubernetes/elk/logstash-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: logstash
+  namespace: elk
 spec:
   replicas: 1
   selector:
@@ -13,8 +14,15 @@ spec:
         app: logstash
     spec:
       containers:
-        - name: logstash
-          image: docker.elastic.co/logstash/logstash:7.10.2
-          ports:
-            - containerPort: 5044
-            - containerPort: 9600
+      - name: logstash
+        image: docker.elastic.co/logstash/logstash:7.17.0
+        ports:
+        - containerPort: 5044
+        - containerPort: 9600
+        volumeMounts:
+        - name: logstash-pipeline
+          mountPath: /usr/share/logstash/pipeline
+      volumes:
+      - name: logstash-pipeline
+        configMap:
+          name: logstash-pipeline
