--- a/kubernetes/persistent-volumes/pvc.yaml
+++ b/kubernetes/persistent-volumes/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nst-pvc
+  namespace: default
 spec:
   accessModes:
     - ReadWriteMany
