--- a/inference_services/model1/requirements.txt
+++ b/inference_services/model1/requirements.txt
@@ -1,8 +1,3 @@
-fastapi
-uvicorn[standard]
-python-multipart
-numpy
-imageio
-Pillow
-tensorflow # Use CPU version for lighter image. For specific hardware, this might change.
-scipy
+fastapi==0.95.0
+uvicorn[standard]==0.23.1
+python-multipart==0.0.6
