--- a/inference_services/model3/Dockerfile
+++ b/inference_services/model3/Dockerfile
@@ -1,12 +1,14 @@
-FROM python:3.9-slim-buster
+# ── inference_services/model3/Dockerfile ──
+FROM deepanshu0903/tf-base:2.11.0-cpu
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install only model-3’s minimal requirements
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r /app/requirements.txt
 
 COPY ./app /app
 
 EXPOSE 8000
-
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
