--- a/fine_tuning_service/Dockerfile
+++ b/fine_tuning_service/Dockerfile
@@ -1,6 +1,6 @@
 # ── fine_tuning_service/Dockerfile ──
 # Use the shared base that already contains TF-CPU, NumPy, SciPy, Pillow, imageio
-FROM deepanshu0903/tf-base:2.11.0-cpu
+FROM deepanshu0903/nst_app:tf-base
 
 WORKDIR /app
 
