--- a/inference_services/model3/Dockerfile
+++ b/inference_services/model3/Dockerfile
@@ -1,5 +1,5 @@
 # ── inference_services/model3/Dockerfile ──
-FROM deepanshu0903/tf-base:2.11.0-cpu
+FROM deepanshu0903/nst_app:tf-base
 
 WORKDIR /app
 
