--- a/kubernetes/elk/filebeat-daemonset.yaml
+++ b/kubernetes/elk/filebeat-daemonset.yaml
@@ -5,32 +5,46 @@ metadata:
   namespace: elk
 spec:
   selector:
-    matchLabels: { app: filebeat }
+    matchLabels:
+      app: filebeat
   template:
     metadata:
-      labels: { app: filebeat }
+      labels:
+        app: filebeat
     spec:
       serviceAccountName: filebeat
+
+      # ✅ Run the pod as root to avoid permission issues on mounted logs
+      securityContext:
+        runAsUser: 0
+
+      terminationGracePeriodSeconds: 30
+
       containers:
       - name: filebeat
         image: docker.elastic.co/beats/filebeat:7.17.0
-        args: ["-c", "/usr/share/filebeat/filebeat.yml", "-e"]
+        args:
+        - -c
+        - /usr/share/filebeat/filebeat.yml
+        - -e
         env:
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         volumeMounts:
         - name: config
           mountPath: /usr/share/filebeat/filebeat.yml
           subPath: filebeat.yml
         - name: varlog
-          mountPath: /var/log/containers
+          mountPath: /var/lib/docker/containers
           readOnly: true
+        resources: {}  # You can define CPU/memory limits here if needed
+
       volumes:
       - name: config
         configMap:
           name: filebeat-config
       - name: varlog
         hostPath:
-          path: /var/log/containers
+          path: /var/lib/docker/containers
