--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,6 +10,14 @@ server {
     alias /usr/share/nginx/html/static/;
   }
 
+  # Proxy API requests to the routing_service
+  location /stylize { # Or a more general prefix like /api/
+      proxy_pass http://routing_service:8000; # 'routing_service' is the Docker service name
+      # proxy_set_header Host $host;
+      # proxy_set_header X-Real-IP $remote_addr;
+      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      # proxy_set_header X-Forwarded-Proto $scheme;
+  }
   location / {
     try_files $uri $uri/ /index.html;
   }
