--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = inventory.ini
+interpreter_python = /usr/bin/python3
 host_key_checking = False
 timeout = 30
 stdout_callback = yaml
