--- a/kubernetes/deployments/inference-model3-deployment.yaml
+++ b/kubernetes/deployments/inference-model3-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: inference-service-model3
           image: deepanshu0903/nst_app:inference_service_model3
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Never
           ports:
             - containerPort: 8000
           volumeMounts:
